--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'com.squareup.okhttp3:okhttp:4.12.0'
+	implementation 'org.slf4j:jcl-over-slf4j:2.0.12'
+
 }
 
 tasks.named('test') {
